chore: cleanup highlight and list styles

--- a/content/resume/resume.html
+++ b/content/resume/resume.html
@@ -169,7 +169,7 @@ const eleventyNavigation = {
 </section>
 <section>
   <h2>Relevant Skill</h2>
-  <ul class="skill-list">
+  <ul class="tag-list">
     <li>HTML</li>
     <li>CSS</li>
     <li>JS</li>
